--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ pytest-mock = "^3.7.0"
 matplotlib = "^3.6.1"
 numpy = "^1.23.4"
 pytest-skip-slow = "^0.0.3"
+scikit-learn = "^1.1.3"
 
 [tool.coverage.run]
 branch = true
