--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -96,4 +96,4 @@ repos:
     rev: v1.1.294
     hooks:
       - id: pyright
-        exclude: ^(tests/|demos/|lib/debouncedpin\.py|tools/)
+        exclude: ^(tests/|demos/|lib/debouncedpin\.py|tools/|lib/lzss/)
