--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v2.2.2
     hooks:
       - id: codespell
+        exclude: ^(tests/)
 
   - repo: https://github.com/PyCQA/bandit.git
     rev: 1.7.4
