--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,57 +1,14 @@
+exclude: ^(poetry.lock|.idea/)
 repos:
-  - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.4.8"
     hooks:
-      - id: codespell
-
-  - repo: https://github.com/PyCQA/bandit.git
-    rev: 1.7.4
-    hooks:
-      - id: bandit
-        additional_dependencies: ["bandit[toml]"]
-        args: ["-c", "pyproject.toml"]
-
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        name: isort
-        args: ["--profile=black"]
-      - id: isort
-        name: isort (cython)
-        types: [cython]
-        args: ["--profile=black"]
-
-  - repo: https://github.com/psf/black
-    rev: 23.1.0
-    hooks:
-      - id: black
-        args:
-          - "--target-version=py38"
-          - "--target-version=py39"
-          - "--target-version=py310"
-        types: [python]
-
-  - repo: https://github.com/asottile/blacken-docs
-    rev: 1.13.0
-    hooks:
-      - id: blacken-docs
-
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.10.0
-    hooks:
-      - id: python-check-blanket-noqa
-      - id: python-check-blanket-type-ignore
-      - id: python-check-mock-methods
-      - id: python-no-log-warn
-      - id: rst-backticks
-      - id: rst-directive-colons
-        types: [text]
-      - id: rst-inline-touching-normal
-        types: [text]
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.6.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -76,24 +33,9 @@ repos:
         args: [--markdown-linebreak-ext=md]
         exclude: \.(html|svg)$
 
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.2.0
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.3.0
+    additional_dependencies:
+      - tomli
     hooks:
-      - id: setup-cfg-fmt
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-2020
-          - flake8-bugbear
-          - flake8-comprehensions
-          - flake8-docstrings
-          - flake8-implicit-str-concat
-
-  - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.294
-    hooks:
-      - id: pyright
-        exclude: ^(tests/|demos/|lib/debouncedpin\.py|tools/)
+      - id: codespell
