--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.10"]
+        python-version: ["3.11"]
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
@@ -30,10 +30,10 @@ jobs:
       #       check-out repo and set-up python
       #----------------------------------------------
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -52,7 +52,7 @@ jobs:
       #----------------------------------------------
       - name: Load cached venv
         id: cached-poetry-dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
@@ -62,7 +62,7 @@ jobs:
       #----------------------------------------------
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
+        run: poetry install --no-interaction --no-root --with=dev
 
       #----------------------------------------------
       #   install your root project, if required
@@ -73,7 +73,9 @@ jobs:
       #----------------------------------------------
       #              run pre-commit
       #----------------------------------------------
-      - uses: pre-commit/action@v2.0.3
+      - name: Pre-commit run
+        run: |
+          poetry run pre-commit run --show-diff-on-failure --color=always --all-files
 
       #----------------------------------------------
       #              run test suite
@@ -86,14 +88,7 @@ jobs:
           # exit-zero treats all errors as warnings
           python -m flake8 . --count --exit-zero --statistics
 
-      - name: Check tests folder existence
-        id: check_test_files
-        uses: andstor/file-existence-action@v1
-        with:
-          files: "tests"
-
       - name: Run tests
-        if: steps.check_test_files.outputs.files_exists == 'true'
         run: |
           source .venv/bin/activate
           python -m pytest --cov=lib --cov-report term --cov-report xml --cov-config .coveragerc --junitxml=testresults.xml --slow
@@ -101,7 +96,7 @@ jobs:
 
       - name: Upload coverage to Codecov
         if: steps.check_test_files.outputs.files_exists == 'true'
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
